MSSQL + Sync algoritmus

--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -56,11 +56,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Db.cs" />
+    <Compile Include="MSSQL.cs" />
+    <Compile Include="MySQL.cs" />
+    <Compile Include="NATURASOFT.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>NATURASOFT.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="NATURASOFT.xsc">
+      <DependentUpon>NATURASOFT.xsd</DependentUpon>
+    </None>
+    <None Include="NATURASOFT.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>NATURASOFT.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="NATURASOFT.xss">
+      <DependentUpon>NATURASOFT.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Configuration\Configuration.csproj">
