--- a/Webszinkron/App.config
+++ b/Webszinkron/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Webszinkron.Properties.Settings.ConnectionString"
+            connectionString="Data Source=ZOTYA-PC\NATURASOFT;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
