Full code working; Finalizing start

--- a/EHandler/EHandler.csproj
+++ b/EHandler/EHandler.csproj
@@ -45,5 +45,8 @@
     <Compile Include="Handler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="System\Drawing\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
