--- a/ProductSync/ProductSync.csproj
+++ b/ProductSync/ProductSync.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2D76D9A1-04D1-4F88-BB77-3420B309DFA1}</ProjectGuid>
+    <ProjectGuid>{F30DFCFE-2F5B-4645-9C98-D1F940BB9D91}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebSync</RootNamespace>
-    <AssemblyName>WebSync</AssemblyName>
+    <RootNamespace>ProductSync</RootNamespace>
+    <AssemblyName>ProductSync</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -30,24 +30,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -60,13 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WSync.cs" />
+    <Compile Include="Prices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Configuration\Configuration.csproj">
       <Project>{2d85953f-369d-4872-ac92-a5a92450f46e}</Project>
       <Name>Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Crypting\Crypting.csproj">
+      <Project>{32227c43-5b1a-4fe7-b981-034f5d9678c7}</Project>
+      <Name>Crypting</Name>
     </ProjectReference>
     <ProjectReference Include="..\Database\Database.csproj">
       <Project>{8bb1055e-c9f5-4c3f-acbd-5fdf37ea93cf}</Project>
@@ -79,10 +65,6 @@
     <ProjectReference Include="..\EHandler\EHandler.csproj">
       <Project>{2d94ec09-2860-4cba-b9af-804dc6b54828}</Project>
       <Name>EHandler</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProductSync\ProductSync.csproj">
-      <Project>{f30dfcfe-2f5b-4645-9c98-d1f940bb9d91}</Project>
-      <Name>ProductSync</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
